[package]
name = "asma"
version = "0.1.0"
authors = ["Cliff Hudson <cliff.s.hudson@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
#conpty = "0.5.1"
conpty = { path = "../../conpty" }
# For .ico support
# image = { version = "0.24.0", default-features = false, features = [ "ico" ] }
static_init = "1.0.3"
once_cell = "1.18.0"
rfd = "0.12.1"
serde = { version = "1.0.190", features = [ "derive"] }
serde_json = "1.0.108"
uuid = { version = "1.5.0", features = [ "v4", "serde" ] }
futures-util = "0.3.29"
process_path = "0.1.4"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["json", "stream" ] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter"] }
#slint = "1.2.2"
zip = "0.6.6"
iced= { version = "0.10.0", features = [ "advanced", "image", "debug", "tokio" ] }

[build-dependencies]
anyhow = "1.0.75"
# slint-build = "1.2.2"
vergen = { version = "8.2.5", features = [ "build"] }
